--- a/femme.html
+++ b/femme.html
@@ -48,74 +48,25 @@
         2022
       </h3>
       <div class="canva">
-        <div class="homme"></div>
-        <div class="femme"></div>
+        <div id="homme"></div>
+        <div id="femme">
+          
+        </div>
+      </div>
+      <div class="pct">
+        <div id="pct_h"></div>
+        <div id="pct_f"></div>
       </div>
     </div>
-
-    <!--deuxième partie-->
 
     <div class="blurball1"></div>
     <div class="blurball2"></div>
-
-    <div class="section_2">
-      <div class="title">
-        <h2>Le BUT MMI c’est quoi ?</h2>
-      </div>
-      <div class="row">
-        <div class="pres">
-          <div class="ellipse">
-            <img class="cercle" src="./img/fatigue.jpeg" alt="jsp" />
-          </div>
-          <h3>
-            Un BUT accessible à tout titulaire d’un baccalauréat, général ou
-            technologique (STMG ou STI2D).
-          </h3>
-        </div>
-
-        <div class="pres">
-          <div class="ellipse">
-            <img class="cercle" src="./img/ensemble.jpg" alt="jsp" />
-          </div>
-          <h3>
-            Des travaux pratiques et des projets tutorés tout au long du cursus.
-          </h3>
-        </div>
-
-        <div class="pres">
-          <div class="ellipse">
-            <img class="cercle" src="./img/studi.jpeg" alt="jsp" />
-          </div>
-          <h3>
-            Une insertion professionnelle facilité: et des poursuites d'études
-            vastes.
-          </h3>
-        </div>
-      </div>
-    </div>
-
-    <!--troisième partie-->
-
-    <div class="blurball3"></div>
-    <div class="blurball4"></div>
-
-    <div class="section_3">
-      <img src="./img/ecole-esp.jpg" alt="jsp" />
-
-      <h2>Accessible par Parcoursup</h2>
-      <p>
-        Parcoursup est la plateforme nationale et officielle sur laquelle tu vas
-        faire tes vœux d’orientation pour entrer en études supérieures, après le
-        bac ou lors d’une potentielle réorientation.En 2024, Parcoursup
-        référence plus de 20.000 formations (dont les BUT).
-      </p>
-    </div>
 
     <footer>
       <h3>Alexandre - Auger</h3>
       <a href="#"><h3>Haut de page ↑</h3></a>
     </footer>
 
-    <script src="./js/femme.js"></script>
+    <script src="./js/femme.js" type="module"></script>
   </body>
 </html>
