--- a/mention.html
+++ b/mention.html
@@ -32,7 +32,7 @@
               <li><a href="index.html">Accueil</a></li>
               <li><a href="admissions.html">Admissions par filière</a></li>
               <li><a href="femme.html">Hommes ou Femmes ?</a></li>
-              <li><a href="#">Pourquoi ?</a></li>
+              <li><a href="enviro.html">Ecosysteme de travail</a></li>
             </ul>
           </nav>
         </div>
@@ -41,10 +41,13 @@
 
     <div class="section_2">
       <div class="title">
-        <h2>Proportions des mentions dans les BUT</h2>
+        <h2>Proportions des mentions en MMI en 2020</h2>
         <h3>
-          blabskanfbeoizhfon bhjei bijek nezi jijo ezfoiuhzo jéuh ifnihckahiu
-          hoirj ihkn fizh i
+          Le BUT métiers du multimédia et de l’Internet est accessible à tout
+          titulaire d’un baccalauréat, général ou technologique (STMG ou STI2D).
+          L’accès se fait sur dossier scolaire, projet motivé, voire tests et/ou
+          entretien. Rassurez-vous la mention au baccalauréat n’est pas prise en
+          compte dans l’admission.
         </h3>
       </div>
       <div class="video">
@@ -57,14 +60,14 @@
     <!--troisième partie-->
 
     <div class="section_3">
-      <img src="./img/ecole-esp.jpg" alt="jsp" />
+      <img src="./img/diplome_bac.jpg" alt="jsp" />
 
-      <h2>Accessible par Parcoursup</h2>
+      <h2>Retour sur l'année 2020</h2>
       <p>
-        Parcoursup est la plateforme nationale et officielle sur laquelle tu vas
-        faire tes vœux d'orientation pour entrer en études supérieures, après le
-        bac ou lors d'une potentielle réorientation.En 2024, Parcoursup
-        référence plus de 20.000 formations (dont les BUT).
+        Avec l'épidémie de coronavirus, les épreuves écrites du baccalauréat
+        2020 ont été annulées et c'est grâce au contrôle continu que les lycéens
+        ont pu valider leur diplôme ou non. Une année inédite donc pour
+        l'épreuve. On vous récapitule tous les résultats, académie par académie.
       </p>
     </div>
 
